add count
